--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -28,9 +28,9 @@ $(document).ready(function(){
 	var p = Popcorn.jplayer('#jquery_jplayer_1', {
 		media: {
 			title: "Big Buck Bunny Trailer",
-			m4v: "http://www.jplayer.org/video/m4v/Big_Buck_Bunny_Trailer.m4v",
-			ogv: "http://www.jplayer.org/video/ogv/Big_Buck_Bunny_Trailer.ogv",
-			webmv: "http://www.jplayer.org/video/webm/Big_Buck_Bunny_Trailer.webm",
+			m4v: "https://drive.google.com/uc?export=download&id=0B6nnXQwpzrG1UEF5QU8xUXNRQTg.mkv",
+			ogv: "https://drive.google.com/uc?export=download&id=0B6nnXQwpzrG1UEF5QU8xUXNRQTg.ogv",
+			webmv: "https://drive.google.com/uc?export=download&id=0B6nnXQwpzrG1UEF5QU8xUXNRQTg.webm",
 			poster: "http://www.jplayer.org/video/poster/Big_Buck_Bunny_Trailer_480x270.png"
 		},
 		options: {
