--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -28,9 +28,9 @@ $(document).ready(function(){
 	var p = Popcorn.jplayer('#jquery_jplayer_1', {
 		media: {
 			title: "Big Buck Bunny Trailer",
-			m4v: "https://drive.google.com/uc?export=download&id=0B6nnXQwpzrG1UEF5QU8xUXNRQTg.mkv",
-			ogv: "https://drive.google.com/uc?export=download&id=0B6nnXQwpzrG1UEF5QU8xUXNRQTg.ogv",
-			webmv: "https://drive.google.com/uc?export=download&id=0B6nnXQwpzrG1UEF5QU8xUXNRQTg.webm",
+			m4v: "http://www.sample-videos.com/video/mkv/720/big_buck_bunny_720p_1mb.mkv.m4v",
+			ogv: "http://www.sample-videos.com/video/mkv/720/big_buck_bunny_720p_1mb.mkv.ogv",
+			webmv: "http://www.sample-videos.com/video/mkv/720/big_buck_bunny_720p_1mb.kv.webm",
 			poster: "http://www.jplayer.org/video/poster/Big_Buck_Bunny_Trailer_480x270.png"
 		},
 		options: {
