--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 	<source src="https://onedrive.live.com/download?cid=F14C395F3FB7BAEC&resid=F14C395F3FB7BAEC%2110254&authkey=ADy1tlZlwxmXZ8I" type='video/ogg; codecs="theora, vorbis"'>
 	<source src="https://onedrive.live.com/download?cid=F14C395F3FB7BAEC&resid=F14C395F3FB7BAEC%2110254&authkey=ADy1tlZlwxmXZ8I" type='video/webm; codecs="vp8, vorbis"'>
 	 <track label="English subtitles" kind="subtitles" srclang="en" src="en.vtt" default>
+	 <track label="English subtitles" kind="subtitles" srclang="en" src="pt.vtt" default>
+	 <track label="English subtitles" kind="subtitles" srclang="en" src="es.vtt" default>
+	 
        <p class="vjs-no-js">
       To view this video please enable JavaScript, and consider upgrading to a web browser that
       <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
