--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <source src="https://onedrive.live.com/download?cid=F14C395F3FB7BAEC&resid=F14C395F3FB7BAEC%2110254&authkey=ADy1tlZlwxmXZ8I" type='video/mp4; codecs="theora, vorbis"'>
 	<source src="https://onedrive.live.com/download?cid=F14C395F3FB7BAEC&resid=F14C395F3FB7BAEC%2110254&authkey=ADy1tlZlwxmXZ8I" type='video/ogg; codecs="theora, vorbis"'>
 	<source src="https://onedrive.live.com/download?cid=F14C395F3FB7BAEC&resid=F14C395F3FB7BAEC%2110254&authkey=ADy1tlZlwxmXZ8I" type='video/webm; codecs="vp8, vorbis"'>
-	<track label="English" kind="subtitles" srclang="en" src="en.vtt" default>
-    <track label="Portugues" kind="subtitles" srclang="de" src="pt.vtt">
-    <track label="Español" kind="subtitles" srclang="es" src="es.vtt">
+	<track kind="captions" src="en.vtt" srclang="en" label="English" default>
 	 
        <p class="vjs-no-js">
       To view this video please enable JavaScript, and consider upgrading to a web browser that
