--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<source src="https://onedrive.live.com/download?cid=F14C395F3FB7BAEC&resid=F14C395F3FB7BAEC%2110254&authkey=ADy1tlZlwxmXZ8I" type='video/ogg; codecs="theora, vorbis"'>
 	<source src="https://onedrive.live.com/download?cid=F14C395F3FB7BAEC&resid=F14C395F3FB7BAEC%2110254&authkey=ADy1tlZlwxmXZ8I" type='video/webm; codecs="vp8, vorbis"'>
 	<track kind="captions" src="en.vtt" srclang="en" label="English" default>
+	<track kind="captions" src="pt.vtt" srclang="pt" label="portugues">
 	 
        <p class="vjs-no-js">
       To view this video please enable JavaScript, and consider upgrading to a web browser that
