--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-  <link href="http://vjs.zencdn.net/5.8.8/video-js.css" rel="stylesheet">
+  <link href="video-js.css" rel="stylesheet">
 
   <!-- If you'd like to support IE8 -->
   <script src="http://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
@@ -21,5 +21,5 @@
     </p>
   </video>
 
-  <script src="http://vjs.zencdn.net/5.8.8/video.js"></script>
+  <script src="video.js"></script>
 </body>
