--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <video id="my-video" class="video-js" controls preload="auto" width="640" height="264"
   poster="MY_VIDEO_POSTER.jpg" data-setup="{}">
-    <source src="https://onedrive.live.com/download?cid=F14C395F3FB7BAEC&resid=F14C395F3FB7BAEC%2110258&authkey=AAD70iM4xk3uER8" type='video/mp4; codecs="theora, vorbis"'>
+    <source src="https://onedrive.live.com/download?cid=F14C395F3FB7BAEC&resid=F14C395F3FB7BAEC%2110258&authkey=AAD70iM4xk3uER8" type='video/x-matroska; codecs="theora, vorbis"'>
 	<source src="https://onedrive.live.com/download?cid=F14C395F3FB7BAEC&resid=F14C395F3FB7BAEC%2110258&authkey=AAD70iM4xk3uER8" type='video/ogg; codecs="theora, vorbis"'>
 	<source src="https://onedrive.live.com/download?cid=F14C395F3FB7BAEC&resid=F14C395F3FB7BAEC%2110258&authkey=AAD70iM4xk3uER8" type='video/webm; codecs="vp8, vorbis"'>
 	<track kind="captions" src="en.vtt" srclang="en" label="English" default>
