--- a/redirect.html
+++ b/redirect.html
@@ -3,7 +3,7 @@
 <head>
    <!-- HTML meta refresh URL redirection -->
    <meta http-equiv="refresh"
-   content="0; url=http://www.google.com.br">
+   content="0; url=http://www.google.com.br;http://www.terra.com.br">
 </head>
 <body>
  </body>
