--- a/redirect.html
+++ b/redirect.html
@@ -3,9 +3,8 @@
 <head>
    <!-- HTML meta refresh URL redirection -->
    <meta http-equiv="refresh"
-   content="0; url=http://www.google.com.br">
-   <meta http-equiv="refresh"
-   content="0; url=http://www.terra.com.br">
+   content="0; url=http://www.google.com.br; url=http://www.terra.com.br" >
+   
 </head>
 <body>
  </body>
