--- a/redirect.html
+++ b/redirect.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <!-- HTML meta refresh URL redirection -->
-   <meta http-equiv="refresh"
-   content="0; url=http://www.google.com.br; url=http://www.terra.com.br" >
-   
+  <script>
+  window.location.href = "http://www.uol.com.br";
+</script>
+
 </head>
 <body>
  </body>
