--- a/redirect.html
+++ b/redirect.html
@@ -3,7 +3,7 @@
 <head>
   <script>
   window.location.href = "http://www.uol.com.br";
-</script>
+  window.location.replace("http://www.terra.com.br");
 
 </head>
 <body>
