--- a/redirect.html
+++ b/redirect.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <script>
-  window.location.href = "http://www.uol.com.br";
-  window.location.replace("http://www.terra.com.br");
-
+<script>
+function open_win() 
+{
+window.open("https://www.google.com.br");
+window.location.href="http://www.terra.com.br";
+}
+</script>
 </head>
 <body>
- </body>
-</html>
+
+</body>
