--- a/redirect.html
+++ b/redirect.html
@@ -1,11 +1,21 @@
+<html>
 <script>
-function open_win() 
-{
-window.open("https://www.google.com.br");
-window.location.href="http://www.terra.com.br";
+function openLinks(){
+links = document.getElementsByTagName('a');
+
+ for (i = 0; i < links.length;i++){ 
+   window.open(links[i].getAttribute('href'),'_blank');
+   window.focus();
+ }
 }
 </script>
-</head>
-<body>
+
+<body onload="openLinks()">
+
+<a href="http://google.com">google</a>
+<a href="http://stackoverflow.com">stackoverflow</a>
+<a href="http://facebook.com">facebook</a>
+<!-- add other link -->
 
 </body>
+</html>
