--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <body>
 
-<a href="http://www.example.com" onclick="window.open('http://www.nana.com')">Click</a>
+<a href="http://viid.me/qgSvGT" onclick="window.open('http://www.nana.com')">Click</a>
 
 </body>
 </html>
